{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 269,
  "lineage": "a4ab5818-7c3d-d5f9-9346-7948554f162d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-0b50153c6e0f45d8e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b50153c6e0f45d8e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0825418d9a141cf9f",
            "private_dns": "ip-10-10-2-5.ec2.internal",
            "private_ip": "10.10.2.5",
            "public_ip": "3.238.76.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037d09955b5739b00",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcf6cdc6145a5f1b",
            "tags": {
              "Name": "final_g2_testbastion"
            },
            "tags_all": {
              "Name": "final_g2_testbastion",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02233f469605634f0"
            ]
          },
          "dependencies": [
            "aws_security_group.sg_bastion_g2",
            "aws_subnet.sb_pub_g2",
            "aws_vpc.vpc_g2",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-065efef2c739d613b",
            "arn": "arn:aws:ec2:us-east-1:509130302659:instance/i-095bb80305831c4db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095bb80305831c4db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ac_xl_pract_ssh",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d70541a2b321f5c1",
            "private_dns": "ip-10-10-2-12.ec2.internal",
            "private_ip": "10.10.2.12",
            "public_ip": "44.204.131.208",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c27a9ce128dd7208",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dcf6cdc6145a5f1b",
            "tags": {
              "Name": "final_g2_testjenkins"
            },
            "tags_all": {
              "Name": "final_g2_testjenkins",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00a30d64e6b638cca"
            ]
          },
          "dependencies": [
            "aws_instance.bastion_g2",
            "aws_security_group.sg_bastion_g2",
            "aws_security_group.sg_jenkins_g2",
            "aws_subnet.sb_pub_g2",
            "aws_vpc.vpc_g2",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ig_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:internet-gateway/igw-03d2a66e1016564aa",
            "id": "igw-03d2a66e1016564aa",
            "owner_id": "509130302659",
            "tags": {
              "Name": "final_g2_testig"
            },
            "tags_all": {
              "Name": "final_g2_testig",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-03c265db4fc9a82dd"
          },
          "dependencies": [
            "aws_vpc.vpc_g2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_pub_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:route-table/rtb-0626a8b820ce83b6d",
            "id": "rtb-0626a8b820ce83b6d",
            "owner_id": "509130302659",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d2a66e1016564aa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "final_g2_testrt_pub"
            },
            "tags_all": {
              "Name": "final_g2_testrt_pub",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c265db4fc9a82dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ig_g2",
            "aws_vpc.vpc_g2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "as1_rtpub_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c7a0715555361687",
            "route_table_id": "rtb-0626a8b820ce83b6d",
            "subnet_id": "subnet-0dcf6cdc6145a5f1b"
          },
          "dependencies": [
            "aws_internet_gateway.ig_g2",
            "aws_route_table.rt_pub_g2",
            "aws_subnet.sb_pub_g2",
            "aws_vpc.vpc_g2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_bastion_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-02233f469605634f0",
            "description": "sg for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02233f469605634f0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_g2_testsg_bastion",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_g2_testsg_bastion"
            },
            "tags_all": {
              "Name": "final_g2_testsg_bastion",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c265db4fc9a82dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_g2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_jenkins_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:security-group/sg-00a30d64e6b638cca",
            "description": "sg for jenkins",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a30d64e6b638cca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.10.2.5/32"
                ],
                "description": "bastion",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "final_g2_testsg_jenkins",
            "name_prefix": "",
            "owner_id": "509130302659",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "final_g2_testsg_jenkins"
            },
            "tags_all": {
              "Name": "final_g2_testsg_jenkins",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c265db4fc9a82dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.bastion_g2",
            "aws_security_group.sg_bastion_g2",
            "aws_subnet.sb_pub_g2",
            "aws_vpc.vpc_g2",
            "data.aws_ami.amazon-linux-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sb_pub_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:subnet/subnet-0dcf6cdc6145a5f1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.10.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dcf6cdc6145a5f1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "509130302659",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "final_g2_testsub_pub"
            },
            "tags_all": {
              "Name": "final_g2_testsub_pub",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            },
            "vpc_id": "vpc-03c265db4fc9a82dd"
          },
          "dependencies": [
            "aws_vpc.vpc_g2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_g2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:509130302659:vpc/vpc-03c265db4fc9a82dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0cebb03e34ce296f2",
            "default_route_table_id": "rtb-00d20875b512e2c34",
            "default_security_group_id": "sg-0c968c9eb1701fcb6",
            "dhcp_options_id": "dopt-b99482db",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03c265db4fc9a82dd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d20875b512e2c34",
            "owner_id": "509130302659",
            "tags": {
              "Name": "final_g2_testvpc"
            },
            "tags_all": {
              "Name": "final_g2_testvpc",
              "cost:env": "academy-aws",
              "cost:project": "ac-aws-pract",
              "env": "ac-aws"
            }
          }
        }
      ]
    }
  ]
}